# security-manager

./: CMakeLists.txt
packaging/: security-manager.spec
src/client/: CMakeLists.txt  client-common.cpp  client-security-manager.cpp
src/common/: CMakeLists.txt  connection.cpp  file-lock.cpp  privilege_db.cpp  service_impl.cpp  smack-labels.cpp
src/common/include/: file-lock.h  privilege_db.h
src/dpl/db/include/dpl/db/: sql_connection.h
src/dpl/db/src/: sql_connection.cpp
src/dpl/log/include/dpl/log/: syslog_provider.h
src/dpl/log/src/: log.cpp  syslog_provider.cpp
src/server/: CMakeLists.txt
src/server/main/: socket-manager.cpp
src/server/service/: base-service.cpp  master-service.cpp  service.cpp
